--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -24,12 +24,8 @@
 	  <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
   <h2>More Than Fun</h2>
 	  <p>Our brain is a muscle and an essential part of our functionality. Keep it strong and build your memory with this fun game!</p>
-  <div>
-  	<img src="images/back.png" alt="Queen of Diamonds">
-  	<img src="images/back.png" alt="Queen of Hearts">
-  	<img src="images/back.png" alt="King of Diamonds">
-  	<img src="images/back.png" alt="King of Hearts">
-  </div>
+  <div id="game-board" class="board clearfix"></div>
+    <button type="reset" value="Reset">Reset</button>
 </main>
 <footer class="clearfix">
   <p class="copyright">Copyright 2017</p>
